# eu.tmux

./: .eumtux.project  .gitignore  .pre-commit-config.yaml  .python-version  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  action.yml  black-pearl.theme.yaml  blue-green.theme.yaml  burgundy-red.theme.yaml  catppuccin.py  catppuccin.tmux  catppuccin.yaml  config-template.yaml  const.py  cpu.sh  current.palette  cute-blue.theme.yaml  d.patch  dark-moderate-blue.theme.yaml  default-config.yaml  default.conf  default_palette.txt  disk.sh  dynamic.glamour.yaml  dynamic.violet.yaml  dynamic_theme.sh  emerald-green.theme.yaml  eutmux-default.yaml  eutmux.eutmux.yaml  eutmux.py  eutmux.theme.yaml  eutmux.tmux  eutmux.yaml  eutmux.yaml~  generate_eutmux_theme.sh  (+37 more)
.github/workflows/: main.yml  release.yml
docs/: brainstorm-2026-06.md
hooks/: session-window-changed.hook
scripts/: eutmux.tmux  focus-mode.sh  generate_eutmux_theme.sh  live-reload.sh  project-theme.sh  ssh-theme.sh  theme-diff.sh  theme-export.py  theme-import.py  theme-preview.sh  time-theme.sh
src/: eutmux.py  utils.py  widgets.py
tests/: test_eutmux.py  test_palette.py
themes/: emerald-green.theme.yaml  ide.theme.yaml  savoy-blue.theme.yaml  template.4.theme.yaml  viiv-cyan.theme.yaml
widgets/: ci_status.sh  clock.sh  git_branch.sh  git_branch_colored.sh  k8s_context.sh  media.sh  pomodoro.sh
