[project]
name = "eu-tmux"
version = "0.3.0"
description = "Dynamic tmux theme engine with palette-driven styling"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.12"
authors = [{ name = "Bruce Wen" }]
keywords = ["tmux", "theme", "terminal"]

dependencies = [
    "peelee>=0.2.22",
    "loguru>=0.7.0",
    "seaborn>=0.12.2",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/bwen/eu.tmux"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["eutmux.py", "palette.py", "utils.py"]
